# Feature-Selection-AI

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
data/: CS170_large_Data__25.txt  CS170_large_Data__32.txt  CS170_large_Data__33.txt  CS170_small_Data__25.txt  CS170_small_Data__32.txt  CS170_small_Data__33.txt  spam_data.txt  spam_data_normalized.txt  test_data.txt  zoo.txt
header/: load.h
include/: featureselection.h  load.h
src/: featureselection.cpp  load.cpp  main.cpp
tests/: featureselectiontests.cpp  loadtests.cpp  nearestneighbortests.cpp
